--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -5,7 +5,11 @@ body {
     width: 100%;
     height: 100%;
     background: url("http://designshack.net/wp-content/uploads/svg-background.jpg");
+    background-size: cover;
     font-family: Geneva, Arial, Helvetica, sans-serif;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 .app {
@@ -18,15 +22,19 @@ body {
 .header {
     flex-grow: 2;
     height: 12vh;
-    background-color: aquamarine;
+    background-color: #fafafa;
     display: flex;
     flex-direction: row-reverse;
+    border-left: 1px solid rgba(128, 128, 128, 0.4);
+    border-bottom: 1px solid rgba(128, 128, 128, 0.4);
+    border-right: 1px solid rgba(128, 128, 128, 0.4);
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
 
     .div-logo {
         flex: 1 1 25%;
         align-items: center;
         justify-content: center;
-        background-color: #dfffca;
         padding-left: 2vw;
         display: flex;
 
@@ -55,28 +63,30 @@ body {
     }
 
     .buttons {
-        flex: 2 2 25%;
+        flex: 2 2 30%;
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: white;
     }
 
-    .login-reg-form {
-        flex: 10 0 50%;
+    .middle {
+        flex: 10 0 45%;
     }
 }
 
 .main {
     flex-grow: 5;
-    height: 80vh;
-    background-color: beige;
+    height: 87vh;
+    margin-top: 0.3vh;
     display: flex;
 
+
     .divForm {
-        background-color: bisque;
         flex: 1 3 33%;
         padding-top: 3vh;
+        border: 1px solid rgba(128, 128, 128, 0.4);
+        border-radius: 5px;
+        background-color: #f5f5eb;
 
         .title-create {
             text-align: center;
@@ -94,12 +104,44 @@ body {
     }
     .content {
         flex: 3 1 66%;
-        background-color: #dfffca;
+        border: 1px solid rgba(128, 128, 128, 0.4);
+        border-radius: 5px;
+        background-color: #f5f5eb;
+        margin-left: 0.3vh;
+        text-align: center;
+        padding-top: 30vh;
     }
 }
 
-.footer {
-    flex-grow: 1;
-    height: 8vh;
-    background-color: aquamarine;
+@widthLogin: 35vw;
+@heightLogin: 45vh;
+
+.modal-window {
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(32, 34, 33, 0.37);
+}
+
+.loginForm {
+    position: absolute;
+    top: 20vh;
+    left: 50vw - @widthLogin/2;
+    width: @widthLogin;
+    height: @heightLogin;
+    z-index: 999;
+    background-color: white;
+    border: 2px solid #b5b5b5;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header-form {
+    text-align: center;
+    padding-top: 5vh;
+    margin-bottom: 3vh;
+    font-size: 20px
 }
