--- a/src/client/components/PortalRegistrationForm/RegistrationForm.less
+++ b/src/client/components/PortalRegistrationForm/RegistrationForm.less
@@ -1,5 +1,5 @@
 @widthRegister: 35vw;
-@heightRegister: 50vh;
+@heightRegister: 60vh;
 
 
 .registration-form {
@@ -52,5 +52,9 @@
     border-radius: 5px;
     border: 1px solid gray;
     padding-left: 5%;
+  }
+
+  & > button {
+    margin-top: 30px;
   }
 }
