add validate for input, get init state from db

--- a/src/client/components/Header/header.less
+++ b/src/client/components/Header/header.less
@@ -2,7 +2,7 @@
 
 .header {
   flex-grow: 2;
-  height: 12vh;
+  height: 75px;
   background-color: @headerColor;
   display: flex;
   flex-direction: row-reverse;
