--- a/src/client/components/LoginForm/LoginForm.less
+++ b/src/client/components/LoginForm/LoginForm.less
@@ -4,7 +4,7 @@
 
 .login-form {
   position: absolute;
-  top: 20vh;
+  top: 15vh;
   left: 50vw - @widthLogin/2;
   width: @widthLogin;
   height: @heightLogin;
@@ -45,16 +45,16 @@
     }
   }
 
-  & > input {
+  & > .input-with-label > input {
     width: 65%;
     height: 4vh;
     margin-top: 3vh;
     border-radius: 5px;
     border: 1px solid gray;
-    padding-left: 5%;
+    padding-left: 10px;
   }
 
   & > button {
-    margin-top: 30px;
+    margin-top: 10px;
   }
 }
