--- a/src/client/components/RegistrationForm/RegistrationForm.less
+++ b/src/client/components/RegistrationForm/RegistrationForm.less
@@ -1,10 +1,10 @@
 @widthRegister: 35vw;
-@heightRegister: 60vh;
+@heightRegister: 70vh;
 
 
 .registration-form {
   position: absolute;
-  top: 20vh;
+  top: 15vh;
   left: 50vw - @widthRegister/2;
   width: @widthRegister;
   height: @heightRegister;
@@ -45,16 +45,16 @@
     }
   }
 
-  & > input {
+  & > .input-with-label > input {
     width: 65%;
     height: 4vh;
     margin-top: 3vh;
     border-radius: 5px;
     border: 1px solid gray;
-    padding-left: 5%;
+    padding-left: 10px;
   }
 
   & > button {
-    margin-top: 30px;
+    margin-top: 10px;
   }
 }
