--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -15,14 +15,14 @@ body {
 .app {
     display: flex;
     flex-direction: column;
-    width: 90vw;
+    width: 80vw;
     margin: auto;
 }
 
 .main {
     flex-grow: 5;
     height: 87vh;
-    margin-top: 0.3vh;
+    margin-top: 5px;
     display: flex;
 
     .content {
@@ -30,7 +30,7 @@ body {
         border: 1px solid rgba(128, 128, 128, 0.4);
         border-radius: 5px;
         background-color: #f5f5eb;
-        margin-left: 0.3vh;
+        margin-left: 5px;
         text-align: center;
         padding-top: 30vh;
     }
