Add admin components

--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -35,3 +35,26 @@ body {
         padding-top: 30vh;
     }
 }
+
+::-webkit-scrollbar{
+    border-color: rgba(255, 171, 109, 0.76);
+    width: 14px;
+    background-color: rgba(205, 214, 173, 0.7);
+}
+::-webkit-scrollbar-thumb{
+    border-width:1px 1px 1px 2px;
+    border-color: rgba(255, 171, 109, 0.76);
+    background-color: rgba(90, 99, 72, 0.9);
+}
+::-webkit-scrollbar-thumb:hover{
+    border-width: 1px 1px 1px 2px;
+    border-color: #555;
+    background-color: rgba(90, 99, 72, 0.9);
+}
+::-webkit-scrollbar-track{
+    border-width:0;
+}
+::-webkit-scrollbar-track:hover{
+    background-color: rgba(178, 187, 150, 0.7);
+
+}
