--- a/src/client/components/Header/header.less
+++ b/src/client/components/Header/header.less
@@ -48,6 +48,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-right: 10px;
   }
 
   .container-buttons {
