refactor structure component

--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -19,7 +19,7 @@
     display: flex;
 
     &__logo {
-      background: url(../../image/logo.png) no-repeat left;
+      background: url(../../../image/logo.png) no-repeat left;
       flex: 1 2 30%;
       height: 100%;
     }
