--- a/src/client/components/App/LoginForm/LoginForm.less
+++ b/src/client/components/App/LoginForm/LoginForm.less
@@ -24,7 +24,7 @@
     font-size: 20px;
     position: relative;
 
-    &__right-button-close {
+    a > &__right-button-close {
       position: absolute;
       height: 30px;
       width: 30px;
@@ -37,11 +37,13 @@
       background-color: white;
       outline: none;
       font-size: 30px;
+      color: black;
     }
 
-    &__right-button-close:active {
+    a > &__right-button-close:active {
       transform: translateY(2px);
       filter: saturate(150%);
+      color: #5d0000;
     }
   }
 
@@ -58,3 +60,13 @@
     margin-top: 10px;
   }
 }
+
+.modal-window {
+  position: absolute;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(32, 34, 33, 0.37);
+}
+
+
