--- a/src/client/components/Admin/Bar/AdminBar.less
+++ b/src/client/components/Admin/Bar/AdminBar.less
@@ -23,8 +23,13 @@
     border-collapse: collapse;
     width: 100%;
 
+    a {
+      width: 100%;
+      heigth: 60px;
+    }
 
-    button {
+
+    a > button {
       height: 60px;
       width: 100%;
       padding: 0;
@@ -38,7 +43,7 @@
       border-top: 1px solid #e6e6e2;
     }
 
-    button:hover {
+    a > button:hover {
       border-color: #d7d7d7;
       background-color: #f5f5f5;
     }
