--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -58,19 +58,21 @@
     justify-content: center;
     border-collapse: collapse;
 
-    &__button-register {
-      width: 50%
+    a {
+      width: 50%;
+      height: 100%;
     }
 
-    &__button-login {
-      width: 50%
+    a > button {
+      width: 100%;
+      height: 100%;
     }
 
     &__button-logout {
       width: 100%
     }
 
-    .header-buttons {
+    a > button {
       height: 100%;
       padding: 0;
       border: none;
