--- a/src/client/components/App/RegistrationForm/RegistrationForm.less
+++ b/src/client/components/App/RegistrationForm/RegistrationForm.less
@@ -58,3 +58,11 @@
     margin-top: 10px;
   }
 }
+
+.modal-window {
+  position: absolute;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(32, 34, 33, 0.37);
+}
