--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -58,18 +58,29 @@
     justify-content: center;
     border-collapse: collapse;
 
+    button {
+      width: 100%;
+      height: 100%;
+      padding: 0;
+      border: none;
+      font: inherit;
+      color: inherit;
+      cursor: pointer;
+      background-color: @headerColor;
+      outline: none;
+      border-left: 1px solid #e6e6e2;
+      border-right: 1px solid #e6e6e2;
+    }
+
     a {
       width: 50%;
       height: 100%;
+      color: black;
     }
 
     a > button {
       width: 100%;
       height: 100%;
-    }
-
-    &__button-logout {
-      width: 100%
     }
 
     a > button {
@@ -85,7 +96,12 @@
       border-right: 1px solid #e6e6e2;
     }
 
-    .header-buttons:hover {
+    .a:hover {
+      border-color: #d7d7d7;
+      background-color: #f5f5f5;
+    }
+
+    button:hover {
       border-color: #d7d7d7;
       background-color: #f5f5f5;
     }
