add admin interface

--- a/src/client/components/Admin/Content/AdminContent.less
+++ b/src/client/components/Admin/Content/AdminContent.less
@@ -4,25 +4,17 @@
   border: 1px solid rgba(128, 128, 128, 0.4);
   border-radius: 5px;
   margin-left: 5px;
-  background-color: #f5f5eb;
+  background-color: #f4f4f0;
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  div {
-    width: 100%;
-  }
-
-  .data-from-db {
-    flex-grow: 1;
-    background-color: rgba(255, 254, 5, 0.25);
-    overflow: auto;
-  }
+  magrin: auto;
 
   .work-space {
-    flex-grow: 1;
-    max-height: 45%;
+    height: 90%;
+    width: 90%;
     overflow: auto;
-    border-top: 2px solid #b3b4b6;
+    magrin: auto;
+    margin-top: 3%;
   }
 }
