--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -47,15 +47,15 @@
     flex: 10 0 45%;
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-right: 10px;
+    justify-content: flex-end;
+    margin-right: 30px;
   }
 
   .container-buttons {
     flex: 2 2 30%;
     display: flex;
-    align-items: center;
     justify-content: center;
+    text-align: right;
     border-collapse: collapse;
 
     button {
