--- a/src/client/components/Admin/RefactorWorkers/RefactorWorkers.less
+++ b/src/client/components/Admin/RefactorWorkers/RefactorWorkers.less
@@ -1,146 +1,94 @@
-.table-workers {
+@widthLogin: 35vw;
+@heightLogin: 55vh;
+
+
+.refactor-workers {
+  position: absolute;
+  top: 15vh;
+  left: 50vw - @widthLogin/2;
+  width: @widthLogin;
+  height: @heightLogin;
+  z-index: 999;
+  background-color: white;
+  border: 2px solid #b5b5b5;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
-  font-size: 18px;
-  height: 100%;
+  align-items: center;
 
-  &__top {
-    display: flex;
-    flex-direction: column;
-    flex: 1 6 40px;
-
-    .table-workers__title {
-      text-align: center;
-      height: 40px;
-      margin-top: 20px;
-    }
-
-    .table-workers__table-header {
-      display: flex;
-      flex-wrap: nowrap;
-      height: 40px;
-      align-items: center;
-      background-color: #e0e0d6;
-      border: 2px solid #e0e0d6;
-      border-radius: 4px;
-
-      &__header-id {
-        flex: 1 20px;
-        text-align: center;
-        border-right: 1px solid #0d5300;
-      }
-
-      &__header-name {
-        flex: 4;
-        padding-left: 25px;
-        border-right: 1px solid #0d5300;
-      }
-
-      &__header-city {
-        flex: 4;
-        padding-left: 25px;
-        border-right: 1px solid #0d5300;
-      }
-
-      &__header-rating {
-        flex: 2;
-        text-align: center;
-        border-right: 1px solid #0d5300;
-      }
-
-      &__header-buttons {
-        flex: 1 60px;
-        text-align: center;
-        width: 100px;
-      }
-    }
-  }
-
-  &__bottom {
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-    flex: 6 1 400px;
-
-    .table-workers__table {
-      margin-top: 10px;
-      font-size: 15px;
-      overflow: auto;
-
-      &__row {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-items: center;
-        height: 30px;
-        border-bottom: 1px solid #0d5300;
-        margin-top: 3px;
-
-        &__id {
-          flex: 1 20px;
-          text-align: center;
-          border-right: 1px solid #0d5300;
-        }
-
-        &__name {
-          flex: 4;
-          padding-left: 25px;
-          border-right: 1px solid #0d5300;
-        }
-
-        &__city {
-          flex: 4;
-          padding-left: 25px;
-          border-right: 1px solid #0d5300;
-        }
-
-        &__rating {
-          flex: 2;
-          text-align: center;
-          border-right: 1px solid #0d5300;
-        }
-
-        &__buttons {
-          flex: 1 60px;
-          text-align: center;
-          width: 20px;
-
-
-          button {
-            height: 28px;
-            width: 50%;
-            padding: 0;
-            border: none;
-            background-color: #f4f4f0;
-            font-size: 13px;
-            color: inherit;
-            cursor: pointer;
-            outline: none;
-            border-left: 1px solid #e6e6e2;
-            border-right: 1px solid #e6e6e2;
-          }
-        }
-      }
-    }
-  }
-
-  &__bttn-add {
-    flex: 1 6 80px;
-    position: relative;
+  &__header {
+    text-align: center;
     width: 100%;
+    padding-top: 5vh;
+    margin-bottom: 3vh;
+    font-size: 20px;
+    position: relative;
 
-    button {
+    a > &__right-button-close {
       position: absolute;
-      right: 30px;
-      height: 100%;
-      width: 100px;
+      height: 30px;
+      width: 30px;
+      top: 15px;
+      right: 15px;
       padding: 0;
       border: none;
       color: inherit;
       cursor: pointer;
-      background-color: #e6e6e2;
+      background-color: white;
       outline: none;
-      border: 1px solid #b9b9b5;
+      font-size: 30px;
+      color: black;
+    }
+
+    a > &__right-button-close:active {
+      transform: translateY(2px);
+      filter: saturate(150%);
+      color: #5d0000;
     }
   }
+
+  & > .input-with-label > input {
+    width: 65%;
+    height: 4vh;
+    margin-top: 3vh;
+    border-radius: 5px;
+    border: 1px solid gray;
+    padding-left: 10px;
+  }
+
+  &__select {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    height: 70px;
+
+    label {
+      font-size: 14px;
+      position: absolute;
+      left: 17%;
+      color: #212121;
+    }
+
+    select {
+      width: 68%;
+      height: 5vh;
+      margin-top: 3vh;
+      border-radius: 5px;
+      border: 1px solid gray;
+    }
+  }
+
+  & > button {
+    margin-top: 10px;
+  }
 }
+
+.modal-window {
+  position: absolute;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(32, 34, 33, 0.37);
+}
+
+
