--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -4,8 +4,7 @@ body {
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    background: url("http://designshack.net/wp-content/uploads/svg-background.jpg");
-    background-size: cover;
+    background-color: darkseagreen;
     font-family: Geneva, Arial, Helvetica, sans-serif;
     -webkit-user-select: none;
     -moz-user-select: none;
