--- a/src/client/components/App/RegistrationForm/RegistrationForm.less
+++ b/src/client/components/App/RegistrationForm/RegistrationForm.less
@@ -45,6 +45,14 @@
     }
   }
 
+  &__input-error {
+    font-size: 12px;
+    color: #733924;
+    position: relative;
+    bottom: 10px;
+  }
+
+
   & > .input-with-label > input {
     width: 65%;
     height: 4vh;
