add delete for all models

--- a/src/client/components/Admin/TableCities/RefactorCities.less
+++ b/src/client/components/Admin/TableCities/RefactorCities.less
@@ -82,6 +82,19 @@
           text-align: center;
           justify-content: center;
 
+          button {
+            width: 50%;
+            height: 28px;
+            padding: 0;
+            border: none;
+            background-color: #f4f4f0;
+            font-size: 13px;
+            color: black;
+            cursor: pointer;
+            outline: none;
+            border-left: 1px solid #e6e6e2;
+            border-right: 1px solid #e6e6e2;
+          }
 
           a > button {
             width: 50%;
@@ -90,7 +103,7 @@
             border: none;
             background-color: #f4f4f0;
             font-size: 13px;
-            color: inherit;
+            color: black;
             cursor: pointer;
             outline: none;
             border-left: 1px solid #e6e6e2;
