--- a/src/client/components/Admin/RefactorClients/RefactorClients.less
+++ b/src/client/components/Admin/RefactorClients/RefactorClients.less
@@ -1,5 +1,5 @@
 @widthLogin: 35vw;
-@heightLogin: 70vh;
+@heightLogin: 67vh;
 
 
 .refactor-clients {
@@ -67,6 +67,10 @@
   height: 100vh;
   width: 100vw;
   background-color: rgba(32, 34, 33, 0.37);
+}
+
+.edit-client {
+  height: 55vh;
 }
 
 
