--- a/src/client/components/App/OrderForm/OrderForm.less
+++ b/src/client/components/App/OrderForm/OrderForm.less
@@ -7,7 +7,7 @@
 
   &__title {
     text-align: center;
-    padding-top: 3vh;
+    padding-top: 2vh;
     margin-bottom: 3vh;
     font-size: 20px;
   }
@@ -31,7 +31,7 @@
     width: 100%;
     text-align: center;
     position: relative;
-    height: 75px;
+    height: 70px;
 
     label {
       font-size: 14px;
@@ -50,8 +50,18 @@
   }
 
   &__order-form > button {
-    margin-top: 30px;
+    margin-top: 10px;
+    height: 30px;
+    width: 70px;
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    cursor: pointer;
+    background-color: #ffffff;
+    outline: none;
+    border: 1px solid #b5b5b5;
+    border-radius: 4px;
+    font-size: 14px;
   }
-
-
 }
