--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -21,7 +21,7 @@ body {
 .main {
     flex-grow: 5;
     height: 87vh;
-    margin-top: 5px;
+    margin-top: 3px;
     display: flex;
 
     .content {
@@ -29,9 +29,9 @@ body {
         border: 1px solid rgba(128, 128, 128, 0.4);
         border-radius: 5px;
         background-color: #f5f5eb;
-        margin-left: 5px;
-        text-align: center;
-        padding-top: 30vh;
+        display: flex;
+        align-items: center;
+        margin-left: 3px;
     }
 }
 
