--- a/src/client/components/Admin/RefactorOrders/RefactorOrders.less
+++ b/src/client/components/Admin/RefactorOrders/RefactorOrders.less
@@ -1,10 +1,10 @@
 @widthLogin: 35vw;
-@heightLogin: 65vh;
+@heightLogin: 80vh;
 
 
-.refactor-workers {
+.refactor-orders {
   position: absolute;
-  top: 15vh;
+  top: 3vh;
   left: 50vw - @widthLogin/2;
   width: @widthLogin;
   height: @heightLogin;
@@ -56,11 +56,15 @@
     padding-left: 10px;
   }
 
-  &__select {
+  & > button {
+    margin-top: 10px;
+  }
+
+  &__order-select {
     width: 100%;
     text-align: center;
     position: relative;
-    height: 70px;
+    height: 60px;
 
     label {
       font-size: 14px;
@@ -71,21 +75,12 @@
 
     select {
       width: 68%;
-      height: 5vh;
+      height: 4.5vh;
       margin-top: 3vh;
       border-radius: 5px;
       border: 1px solid gray;
     }
   }
-
-  & > button {
-    margin-top: 10px;
-  }
-}
-
-.add-worker {
-  height: 55vh
-;
 }
 
 .modal-window {
@@ -94,6 +89,10 @@
   height: 100vh;
   width: 100vw;
   background-color: rgba(32, 34, 33, 0.37);
+}
+
+.edit-order {
+  height: 93vh;
 }
 
 
