--- a/src/client/components/App/OrderForm/OrderForm.less
+++ b/src/client/components/App/OrderForm/OrderForm.less
@@ -1,13 +1,13 @@
 .main-form {
   flex: 1 3 33%;
-  padding-top: 3vh;
   border: 1px solid rgba(128, 128, 128, 0.4);
   border-radius: 5px;
   background-color: #f5f5eb;
+  position: relative;
 
   &__title {
     text-align: center;
-    padding-top: 2vh;
+    padding-top: 5vh;
     margin-bottom: 3vh;
     font-size: 20px;
   }
@@ -71,5 +71,30 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+
+    &__navigation {
+      position: absolute;
+      right: 10px;
+      top: 5px;
+
+      a {
+        width: 130px;
+        height: 25px;
+        color: #7c7f7c;
+      }
+
+      a > button {
+        height: 100%;
+        width: 100%;
+        padding: 0;
+        border: none;
+        font: inherit;
+        color: inherit;
+        background-color: inherit;
+        cursor: pointer;
+        outline: none;
+      }
+    }
   }
 }
