--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -21,8 +21,82 @@ body {
 .main {
     flex-grow: 5;
     height: 87vh;
-    margin-top: 3px;
+    margin-top: 5px;
     display: flex;
+
+    .home-page {
+        width: 100%;
+        border: 1px solid rgba(128, 128, 128, 0.4);
+        border-radius: 5px;
+        background-color: #f5f5eb;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+
+        &__header {
+            height: 90px;
+            padding-top: 20px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+        }
+
+        &__content {
+            flex: 1;
+            width: 100%;
+            display: flex;
+            padding-top: 100px;
+            justify-content: center;
+            background-color: #e9e9df;
+        }
+
+        &__footer {
+            height: 45px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            a {
+                padding-left: 30px;
+                padding-right: 30px;
+            }
+
+            a:nth-child(2) {
+                border-left: 1px solid #babab0;
+                border-right: 1px solid #babab0;
+            }
+        }
+
+        &__navigation {
+            position: absolute;
+            right: 0;
+            top: 10px;
+
+            a {
+                width: 130px;
+                height: 20px;
+                color: #7c7f7c;
+                display: flex;
+                justify-content: right;
+            }
+
+            a > button {
+                height: 100%;
+                width: 100%;
+                padding: 0;
+                border: none;
+                font: inherit;
+                color: inherit;
+                background-color: inherit;
+                cursor: pointer;
+                outline: none;
+            }
+        }
+    }
+
 
     .content {
         flex: 3 1 66%;
@@ -32,6 +106,7 @@ body {
         display: flex;
         align-items: center;
         margin-left: 3px;
+        position: relative;
     }
 }
 
