split app query, rename func

--- a/src/client/components/App/OrderForm/OrderForm.less
+++ b/src/client/components/App/OrderForm/OrderForm.less
@@ -72,6 +72,8 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    flex-direction: column;
+
 
     &__navigation {
       position: absolute;
