--- a/src/client/components/App/ChooseWorker/ChooseWorker.less
+++ b/src/client/components/App/ChooseWorker/ChooseWorker.less
@@ -69,8 +69,12 @@
         }
       }
     }
+
     &__worker:hover {
-      background-color: #edebe0;
+      background-color: #d5d3c8;
+    }
+    &__worker:active {
+      background-color: #afada2;
     }
   }
 
