--- a/src/client/components/Admin/RefactorClients/RefactorClients.less
+++ b/src/client/components/Admin/RefactorClients/RefactorClients.less
@@ -1,13 +1,9 @@
-@widthLogin: 35vw;
-@heightLogin: 63vh;
-
-
 .refactor-clients {
-  position: absolute;
+  position: relative;
   top: 15vh;
-  left: 50vw - @widthLogin/2;
-  width: @widthLogin;
-  height: @heightLogin;
+  margin: auto;
+  width: 420px;
+  height: 440px;
   z-index: 999;
   background-color: white;
   border: 2px solid #b5b5b5;
@@ -19,8 +15,8 @@
   &__header {
     text-align: center;
     width: 100%;
-    padding-top: 5vh;
-    margin-bottom: 3vh;
+    padding-top: 40px;
+    margin-bottom: 25px;
     font-size: 20px;
     position: relative;
 
@@ -49,15 +45,31 @@
 
   & > .input-with-label > input {
     width: 65%;
-    height: 4vh;
-    margin-top: 3vh;
+    height: 30px;
+    margin-top: 20px;
     border-radius: 5px;
     border: 1px solid gray;
     padding-left: 10px;
   }
 
   & > button {
-    margin-top: 10px;
+    margin-top: 30px;
+    width: 100px;
+    height: 30px;
+    padding: 0;
+    border: none;
+    color: inherit;
+    font-size: 14px;
+    cursor: pointer;
+    background-color: rgba(221, 235, 200, 0.69);
+    outline: none;
+    border: 1px solid rgba(55, 69, 62, 0.49);
+    border-radius: 5px;
+  }
+
+  & > button:hover {
+    border: 1px solid rgba(55, 69, 62, 0.56);
+    background-color: rgba(234, 248, 213, 0.67);
   }
 }
 
@@ -70,7 +82,7 @@
 }
 
 .edit-client {
-  height: 55vh;
+  height: 380px;
 }
 
 
