--- a/src/client/components/App/ChooseWorker/ChooseWorker.less
+++ b/src/client/components/App/ChooseWorker/ChooseWorker.less
@@ -1,5 +1,5 @@
 .choose-worker {
-  width: 90%;
+  width: 85%;
   height: 90%;
   margin: auto;
   display: flex;
@@ -15,7 +15,7 @@
   }
 
   &__table {
-    width: 95%;
+    width: 92%;
     height: 72%;
     display: flex;
     flex-direction: column;
@@ -87,6 +87,7 @@
     button {
       position: absolute;
       right: 35px;
+      bottom: 5px;
       height: 35px;
       width: 90px;
       padding: 0;
