--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -1,8 +1,8 @@
 @headerColor: #fafafa;
 
 .header {
-  flex-grow: 2;
-  height: 75px;
+  flex-grow: 5;
+  height: 12vh;
   background-color: @headerColor;
   display: flex;
   border-left: 1px solid rgba(128, 128, 128, 0.4);
@@ -12,10 +12,10 @@
   border-bottom-left-radius: 5px;
 
   .container-logo {
-    flex: 1 1 25%;
+    flex: 1 3 300px;
     align-items: center;
     justify-content: center;
-    padding-left: 2vw;
+    padding-left: 40px;
     display: flex;
 
     &__logo {
@@ -26,11 +26,11 @@
 
     &__discription {
       flex: 2 1 70%;
-      padding-right: 2vw;
+      padding-right: 40px;
 
       .company-name {
         font-size: 20px;
-        font-weight: bold;
+        font-weight: bolder;
         letter-spacing: 2px;
         text-align: center;
       }
@@ -44,7 +44,7 @@
   }
 
   .container-user {
-    flex: 10 0 45%;
+    flex: 3 1 400px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -52,7 +52,7 @@
   }
 
   .container-buttons {
-    flex: 2 2 30%;
+    flex: 1 3 300px;
     display: flex;
     justify-content: center;
     text-align: right;
