--- a/src/client/components/App/OrderForm/OrderForm.less
+++ b/src/client/components/App/OrderForm/OrderForm.less
@@ -1,5 +1,5 @@
 .main-form {
-  flex: 1 3 33%;
+  flex: 1 2 33%;
   border: 1px solid rgba(128, 128, 128, 0.4);
   border-radius: 5px;
   background-color: #f5f5eb;
@@ -7,8 +7,8 @@
 
   &__title {
     text-align: center;
-    padding-top: 5vh;
-    margin-bottom: 3vh;
+    padding-top: 35px;
+    margin-bottom: 30px;
     font-size: 20px;
   }
 
@@ -19,19 +19,19 @@
   }
 
   &__order-form > div > input {
-    width: 68%;
-    height: 4vh;
-    margin-top: 3vh;
+    width: 65%;
+    height: 28px;
+    margin-top: 20px;
     border-radius: 5px;
     border: 1px solid gray;
-    padding-left: 2%;
+    padding-left: 15px;
   }
 
   &__order-form > .main-form__order-select {
     width: 100%;
     text-align: center;
     position: relative;
-    height: 70px;
+    height: 60px;
 
     label {
       font-size: 14px;
@@ -42,17 +42,17 @@
 
     select {
       width: 70%;
-      height: 5vh;
-      margin-top: 3vh;
+      height: 33px;
+      margin-top: 20px;
       border-radius: 5px;
       border: 1px solid gray;
     }
   }
 
   &__order-form > button {
-    margin-top: 10px;
-    height: 30px;
-    width: 70px;
+    margin-top: 20px;
+    height: 40px;
+    width: 120px;
     padding: 0;
     border: none;
     font: inherit;
@@ -62,7 +62,7 @@
     outline: none;
     border: 1px solid #b5b5b5;
     border-radius: 4px;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .choosing-master {
@@ -73,30 +73,5 @@
     justify-content: center;
     position: relative;
     flex-direction: column;
-
-
-    &__navigation {
-      position: absolute;
-      right: 10px;
-      top: 5px;
-
-      a {
-        width: 130px;
-        height: 25px;
-        color: #7c7f7c;
-      }
-
-      a > button {
-        height: 100%;
-        width: 100%;
-        padding: 0;
-        border: none;
-        font: inherit;
-        color: inherit;
-        background-color: inherit;
-        cursor: pointer;
-        outline: none;
-      }
-    }
   }
 }
