refactor flex to table

--- a/src/client/components/Admin/TableCities/RefactorCities.less
+++ b/src/client/components/Admin/TableCities/RefactorCities.less
@@ -1,7 +1,7 @@
 .table-cities {
   display: flex;
   flex-direction: column;
-  font-size: 18px;
+  font-size: 16px;
   height: 100%;
 
   &__title {
@@ -15,6 +15,8 @@
   &__table {
     flex: 1;
     overflow: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
 
     table {
       border-collapse: collapse;
@@ -67,7 +69,7 @@
           height: 28px;
           padding: 0;
           border: none;
-          background-color: #f4f4f0;
+          background-color: #f1efe4;
           font-size: 13px;
           color: black;
           cursor: pointer;
@@ -80,7 +82,7 @@
           height: 28px;
           padding: 0;
           border: none;
-          background-color: #f4f4f0;
+          background-color: #f1efe4;
           font-size: 13px;
           color: black;
           cursor: pointer;
@@ -102,7 +104,7 @@
       position: absolute;
       right: 30px;
       height: 100%;
-      width: 100px;
+      width: 120px;
       padding: 0;
       border: none;
       color: inherit;
