reactor some size, preloader, remove unused Router

--- a/src/client/components/Admin/Bar/AdminBar.less
+++ b/src/client/components/Admin/Bar/AdminBar.less
@@ -1,6 +1,7 @@
 .bar-choose-item {
-  width: 20vw;
-  height: 85vh;
+  flex: none;
+  width: 200px;
+  height: 100%;
   border: 1px solid rgba(128, 128, 128, 0.4);
   border-radius: 5px;
   background-color: #f5f5eb;
