--- a/src/client/components/NoMatch/NoMatch.less
+++ b/src/client/components/NoMatch/NoMatch.less
@@ -1,7 +1,8 @@
 .main-no-match {
-  flex-grow: 5;
+  flex: 1;
   height: 87vh;
   margin-top: 5px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   background-color: #f5f5eb;
