--- a/src/client/components/Admin/Content/AdminContent.less
+++ b/src/client/components/Admin/Content/AdminContent.less
@@ -1,6 +1,7 @@
 .admin-content {
-  width: 79vw;
-  height: 85vh;
+  flex: 1 0;
+  min-width: 390px;
+  height: 100%;
   border: 1px solid rgba(128, 128, 128, 0.4);
   border-radius: 5px;
   margin-left: 5px;
