--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -15,14 +15,16 @@ body {
     display: flex;
     flex-direction: column;
     width: 80vw;
+    height: 100vh;
     margin: auto;
 }
 
 .main {
-    flex-grow: 5;
-    height: 86vh;
+    flex: 1;
+    margin-bottom: 10px;
     margin-top: 5px;
     display: flex;
+    min-width: 555px;
 
     .home-page {
         width: 100%;
@@ -130,79 +132,4 @@ body {
 ::-webkit-scrollbar-track:hover{
     background-color: rgba(178, 187, 150, 0.7);
 
-}
-
-.preloader {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    zIndex: 999;
-    background-color: rgba(156, 156, 156, 0.22);
-}
-
-.loader {
-    display: block;
-    position: relative;
-    left: 50%;
-    top: 50%;
-    width: 80px;
-    height: 80px;
-    margin: -40px 0 0 -40px;
-    border-radius: 50%;
-    border: 2px solid transparent;
-    border-top-color: #db6e00;
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
-}
-.loader:before {
-    content: "";
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    right: 5px;
-    bottom: 5px;
-    border-radius: 50%;
-    border: 2px solid transparent;
-    border-top-color: #db9b00;
-    -webkit-animation: spin 3s linear infinite;
-    animation: spin 3s linear infinite;
-}
-.loader:after {
-    content: "";
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    right: 15px;
-    bottom: 15px;
-    border-radius: 50%;
-    border: 2px solid transparent;
-    border-top-color: #ffec00;
-    -webkit-animation: spin 1.5s linear infinite;
-    animation: spin 1.5s linear infinite;
-}
-@-webkit-keyframes spin {
-    0%   {
-        -webkit-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        -ms-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-@keyframes spin {
-    0%   {
-        -webkit-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        -ms-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
 }
