fixed makeOrder, replace request for get table

--- a/src/client/components/App/AllWorkers/AllWorker.less
+++ b/src/client/components/App/AllWorkers/AllWorker.less
@@ -28,9 +28,9 @@
       width: 94%;
       height: 60px;
       margin-top: 7px;
-      margin-left: 2%;
+      margin-left: 10px;
       display: flex;
-      border-bottom: 1px solid #b5b5b5;
+      box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
       border-radius: 5px;
 
       .all-image {
