--- a/src/client/components/App/ChooseWorker/ChooseWorker.less
+++ b/src/client/components/App/ChooseWorker/ChooseWorker.less
@@ -29,9 +29,9 @@
       width: 94%;
       height: 60px;
       margin-top: 7px;
-      margin-left: 2%;
+      margin-left: 10px;
       display: flex;
-      border-bottom: 1px solid #b5b5b5;
+      box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
       border-radius: 5px;
 
       .worker-image {
@@ -73,8 +73,9 @@
     &__worker:hover {
       background-color: #d5d3c8;
     }
-    &__worker:active {
-      background-color: #afada2;
+
+    .active{
+      background-color: rgba(0, 45, 121, 0.21);
     }
   }
 
