remove data from appReducer, refactor actions

--- a/src/client/components/App/OrderForm/OrderForm.less
+++ b/src/client/components/App/OrderForm/OrderForm.less
@@ -1,5 +1,5 @@
 .main-form {
-  flex: 1 2 33%;
+  flex: 0 0 300px;
   border: 1px solid rgba(128, 128, 128, 0.4);
   border-radius: 5px;
   background-color: #f5f5eb;
