--- a/src/client/components/Admin/TableOrders/RefactorOrders.less
+++ b/src/client/components/Admin/TableOrders/RefactorOrders.less
@@ -62,6 +62,10 @@
       }
 
       th:nth-child(7) {
+        border-right: 1px solid grey;
+      }
+
+      th:nth-child(8) {
         width: 120px;
       }
 
@@ -98,6 +102,10 @@
       }
 
       td:nth-child(7) {
+        border-right: 1px solid grey;
+      }
+
+      td:nth-child(8) {
         button {
           width: 50%;
           height: 28px;
