--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -2,8 +2,6 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    width: 100%;
-    height: 100%;
     background-color: darkseagreen;
     font-family: Geneva, Arial, Helvetica, sans-serif;
     -webkit-user-select: none;
@@ -20,7 +18,7 @@ body {
 }
 
 .main {
-    flex: 1;
+    height: 86vh;
     margin-bottom: 10px;
     margin-top: 5px;
     display: flex;
@@ -119,17 +117,16 @@ body {
 ::-webkit-scrollbar-thumb{
     border-width:1px 1px 1px 2px;
     border-color: rgba(255, 171, 109, 0.76);
-    background-color: rgba(90, 99, 72, 0.9);
+    background-color: rgba(167, 176, 142, 0.9);
 }
 ::-webkit-scrollbar-thumb:hover{
     border-width: 1px 1px 1px 2px;
     border-color: #555;
-    background-color: rgba(90, 99, 72, 0.9);
+    background-color: rgba(167, 176, 142, 0.9);
 }
 ::-webkit-scrollbar-track{
     border-width:0;
 }
 ::-webkit-scrollbar-track:hover{
     background-color: rgba(178, 187, 150, 0.7);
-
 }
