add all sort, add footer, refactor some style

--- a/src/client/components/App/OrderForm/OrderForm.less
+++ b/src/client/components/App/OrderForm/OrderForm.less
@@ -7,8 +7,8 @@
 
   &__title {
     text-align: center;
-    padding-top: 35px;
-    margin-bottom: 30px;
+    padding-top: 25px;
+    margin-bottom: 20px;
     font-size: 20px;
   }
 
@@ -50,7 +50,7 @@
   }
 
   &__order-form > button {
-    margin-top: 20px;
+    margin-top: 15px;
     height: 40px;
     width: 120px;
     padding: 0;
@@ -60,8 +60,8 @@
     cursor: pointer;
     background-color: #ffffff;
     outline: none;
-    border: 1px solid #b5b5b5;
-    border-radius: 4px;
+    border: 1px solid #9f9f9f;
+    border-radius: 8px;
     font-size: 16px;
   }
 
