--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -18,94 +18,50 @@ body {
 }
 
 .main {
-    height: 86vh;
-    margin-bottom: 10px;
+    flex: 1;
+    margin-bottom: 5px;
     margin-top: 5px;
     display: flex;
     min-width: 600px;
 
-    .home-page {
-        width: 100%;
-        border: 1px solid rgba(128, 128, 128, 0.4);
-        border-radius: 5px;
-        background-color: #f5f5eb;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-
-        &__header {
-            height: 90px;
-            padding-top: 20px;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-        }
-
-        &__content {
-            flex: 1;
-            width: 100%;
-            display: flex;
-            padding-top: 100px;
-            justify-content: center;
-            background-color: #e9e9df;
-        }
-
-        &__footer {
-            height: 45px;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            a {
-                padding-left: 30px;
-                padding-right: 30px;
-            }
-
-            a:nth-child(2) {
-                border-left: 1px solid #babab0;
-                border-right: 1px solid #babab0;
-            }
-        }
-
-        &__navigation {
-            position: absolute;
-            right: 0;
-            top: 10px;
-
-            a {
-                width: 130px;
-                height: 20px;
-                color: #7c7f7c;
-                display: flex;
-                justify-content: right;
-            }
-
-            a > button {
-                height: 100%;
-                width: 100%;
-                padding: 0;
-                border: none;
-                font: inherit;
-                color: inherit;
-                background-color: inherit;
-                cursor: pointer;
-                outline: none;
-            }
-        }
-    }
 
     .content {
         flex: 2 1 66%;
         border: 1px solid rgba(128, 128, 128, 0.4);
         border-radius: 5px;
+        border-bottom-left-radius: 10px;
+        border-bottom-top-radius: 10px;
         background-color: #f5f5eb;
         display: flex;
         align-items: center;
         margin-left: 5px;
         position: relative;
+    }
+}
+
+.footer {
+    height: 30px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f5f5eb;
+    border-left: 1px solid rgba(128, 128, 128, 0.4);
+    border-top: 1px solid rgba(128, 128, 128, 0.4);
+    border-right: 1px solid rgba(128, 128, 128, 0.4);
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+
+    a {
+        padding-left: 50px;
+        padding-right: 50px;
+        color: black;
+        font-size: 14px;
+    }
+
+    a:nth-child(2) {
+        border-left: 1px solid #babab0;
+        border-right: 1px solid #babab0;
     }
 }
 
