refactr router, preloader, add server side validat

--- a/src/client/components/ModalWindow/ModalWindow.less
+++ b/src/client/components/ModalWindow/ModalWindow.less
@@ -10,12 +10,23 @@
   flex-direction: column;
   margin: auto;
 
-  div {
+  &__info {
     position: absolute;
     top: 40%;
     width: 330px;
     left: 30px;
     text-align: center;
+  }
+
+  &__errors {
+    padding-top: 60px;
+    width: 330px;
+    text-align: center;
+    margin: auto;
+
+    div {
+      padding-top: 20px;
+    }
   }
 
 
