--- a/src/client/components/ModalWindow/ModalWindow.less
+++ b/src/client/components/ModalWindow/ModalWindow.less
@@ -1,7 +1,6 @@
 .modal-info__text {
   position: relative;
   top: 15vh;
-  margin: auto;
   width: 390px;
   height: 250px;
   background-color: #fffdfe;
@@ -13,6 +12,15 @@
   &__info {
     position: absolute;
     top: 40%;
+    width: 330px;
+    left: 30px;
+    text-align: center;
+  }
+
+  &__description {
+    position: absolute;
+    font-size: 12px;
+    bottom: 20px;
     width: 330px;
     left: 30px;
     text-align: center;
