--- a/src/client/components/Admin/Bar/AdminBar.less
+++ b/src/client/components/Admin/Bar/AdminBar.less
@@ -1,56 +1,63 @@
 .bar-choose-item {
   flex: none;
-  width: 200px;
-  height: 100%;
+  min-width: 695px;
+  height: 40px;
   border: 1px solid rgba(128, 128, 128, 0.4);
-  border-radius: 5px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
   background-color: #f5f5eb;
   display: flex;
-  flex-direction: column;
   align-items: center;
-
-  &__title {
-    height: 80px;
-    width: 70%;
-    text-align: center;
-    padding-top: 40px;
-    font-size: 18px;
-  }
 
   &__buttons {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     border-collapse: collapse;
     width: 100%;
 
     a {
-      width: 100%;
-      heigth: 60px;
+      flex: 1;
+      width: 100px;
+      heigth: 40px;
+      border-left: 1px solid #9da79d;
+
+      .button-bar {
+        height: 40px;
+        width: 100%;
+        border: none;
+        padding: 0;
+        font: inherit;
+        color: black;
+        cursor: pointer;
+        background-color: #f4f4f0;
+        outline: none;
+      }
+
+      .active {
+        background-color: rgb(233, 232, 233);
+    }
+
+      .button-bar:hover {
+        background-color: #f5f5f5;
+        color: #1a5500;
+      }
+    }
+
+    a:first-child {
+      border-left: none;
     }
 
 
-    a > button {
-      height: 60px;
-      width: 100%;
-      padding: 0;
-      border: none;
-      font: inherit;
-      color: inherit;
-      cursor: pointer;
-      background-color: #f4f4f0;
-      outline: none;
-      border-bottom: 1px solid #e6e6e2;
-      border-top: 1px solid #e6e6e2;
+    a:first-child > button {
+      border-bottom-left-radius: 5px;
+      border-top-left-radius: 5px;
     }
 
-    a > button:hover {
-      border-color: #d7d7d7;
-      background-color: #f5f5f5;
+    a:last-child > button:last-child {
+      border-bottom-right-radius: 5px;
+      border-top-right-radius: 5px;
     }
 
   }
-
 }
-
