--- a/src/client/components/Admin/Main/MainAdmin.less
+++ b/src/client/components/Admin/Main/MainAdmin.less
@@ -3,15 +3,16 @@
   margin-bottom: 7px;
   margin-top: 5px;
   display: flex;
+  flex-direction: column;
 
   .admin-content {
     flex: 1 0;
-    min-width: 390px;
-    height: 100%;
+    min-width: 695px;
     border: 1px solid rgba(128, 128, 128, 0.4);
-    border-radius: 5px;
-    margin-left: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     background-color: #f4f4f0;
+    margin-top: 1px;
     display: flex;
     flex-direction: column;
     align-items: center;
