--- a/src/client/components/Admin/TableCities/RefactorCities.less
+++ b/src/client/components/Admin/TableCities/RefactorCities.less
@@ -5,21 +5,20 @@
   height: 100%;
 
   &__title {
-    text-align: center;
-    height: 30px;
-    margin-top: 20px;
+    height: 10px;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
+    padding-left: 70px;
   }
 
   &__table {
     flex: 1;
     overflow: auto;
-    margin-top: 15px;
+    margin-top: 23px;
 
     table {
       border-collapse: collapse;
-      width: 98%;
+      width: 100%;
 
       flex: 1;
 
