refactor reducers, simplify main component

--- a/src/client/components/App/ChooseWorker/ChooseWorker.less
+++ b/src/client/components/App/ChooseWorker/ChooseWorker.less
@@ -5,6 +5,21 @@
   display: flex;
   flex-direction: column;
 
+  .buttonHome {
+    font-size: 50px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 95vh;
+    width: 10vw;
+    padding: 0;
+    border: none;
+    color: inherit;
+    cursor: pointer;
+    background-color: rgba(255, 253, 241, 0);
+    outline: none;
+    color: #f5f5eb;
+  }
 
   &__header {
     width: 100%;
