change some style, NODE_ENV, edd send email

--- a/src/client/components/Admin/Bar/AdminBar.less
+++ b/src/client/components/Admin/Bar/AdminBar.less
@@ -3,11 +3,14 @@
   min-width: 695px;
   height: 40px;
   border: 1px solid rgba(128, 128, 128, 0.4);
+  box-shadow: 0 0 7px rgba(0,0,0,0.5);
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
   background-color: #f5f5eb;
   display: flex;
   align-items: center;
+  font-size: 17px;
+  z-index: 1;
 
   &__buttons {
     display: flex;
