--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -1,4 +1,4 @@
-@headerColor: rgb(233, 232, 233);
+@headerColor: rgb(230, 231, 245);
 
 .header {
   flex: 0 0 80px;
@@ -8,6 +8,7 @@
   border-left: 1px solid rgba(128, 128, 128, 0.4);
   border-bottom: 1px solid rgba(128, 128, 128, 0.4);
   border-right: 1px solid rgba(128, 128, 128, 0.4);
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
 
