--- a/src/client/components/App/Preloader/Preloader.less
+++ b/src/client/components/App/Preloader/Preloader.less
@@ -1,5 +1,5 @@
 #preloader {
-  zIndex: 999;
+  z-index: 4;
 
 }
 
@@ -9,6 +9,7 @@
   position: absolute;
   top: 0;
   background-color: rgba(156, 156, 156, 0.22);
+  z-index: 4;
 }
 
 .loader {
@@ -24,6 +25,7 @@
   border-top-color: #db6e00;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
+  z-index: 4;
 }
 .loader:before {
   content: "";
