--- a/src/client/components/NoMatch/NoMatch.less
+++ b/src/client/components/NoMatch/NoMatch.less
@@ -3,10 +3,12 @@
   height: 87vh;
   margin-top: 5px;
   margin-bottom: 5px;
+  min-width: 695px;
   display: flex;
   flex-direction: column;
   background-color: #f5f5eb;
   border: 1px solid rgba(128, 128, 128, 0.4);
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
   border-radius: 5px;
   justify-content: center;
   align-items: center;
