--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -2,8 +2,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: darkseagreen;
-    font-family: Geneva, Arial, Helvetica, sans-serif;
+    background: radial-gradient(circle farthest-corner at 50px 50px, #FBF2EB, #006a70);    font-family: Geneva, Arial, Helvetica, sans-serif;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -39,7 +38,7 @@ body {
 .app-main {
     display: flex;
     flex-direction: column;
-    width: 80vw;
+    width: 80%;
     height: 100vh;
     margin: auto;
 }
@@ -55,6 +54,7 @@ body {
     .content {
         flex: 2 1 66%;
         border: 1px solid rgba(128, 128, 128, 0.4);
+        box-shadow: 0 0 10px rgba(0,0,0,0.5);
         border-radius: 5px;
         border-bottom-left-radius: 10px;
         border-bottom-top-radius: 10px;
@@ -72,7 +72,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(233, 232, 233);
+    background-color: rgb(230, 231, 245);
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
     border-left: 1px solid rgba(128, 128, 128, 0.4);
     border-top: 1px solid rgba(128, 128, 128, 0.4);
     border-right: 1px solid rgba(128, 128, 128, 0.4);
