--- a/src/client/components/Admin/Main/MainAdmin.less
+++ b/src/client/components/Admin/Main/MainAdmin.less
@@ -5,10 +5,12 @@
   display: flex;
   flex-direction: column;
 
+
   .admin-content {
     flex: 1 0;
     min-width: 695px;
     border: 1px solid rgba(128, 128, 128, 0.4);
+    box-shadow: 0 0 7px rgba(0,0,0,0.5);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     background-color: #f4f4f0;
