--- a/src/client/components/Admin/RefactorClients/RefactorClients.less
+++ b/src/client/components/Admin/RefactorClients/RefactorClients.less
@@ -6,10 +6,12 @@
   height: 340px;
   background-color: white;
   border: 2px solid #b5b5b5;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 2;
 
   &__header {
     text-align: center;
@@ -86,6 +88,7 @@
   height: 100vh;
   width: 100vw;
   background-color: rgba(32, 34, 33, 0.37);
+  z-index: 2;
 }
 
 .edit-client {
