--- a/src/client/components/App/OrderForm/OrderForm.less
+++ b/src/client/components/App/OrderForm/OrderForm.less
@@ -3,6 +3,7 @@
   border: 1px solid rgba(128, 128, 128, 0.4);
   border-radius: 5px;
   background-color: #f5f5eb;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
   position: relative;
 
   &__title {
