--- a/src/client/components/ModalWindow/ModalWindow.less
+++ b/src/client/components/ModalWindow/ModalWindow.less
@@ -5,9 +5,11 @@
   height: 250px;
   background-color: #fffdfe;
   border: 2px solid #b5b5b5;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
   border-radius: 20px;
   flex-direction: column;
   margin: auto;
+  z-index: 5;
 
   &__info {
     position: absolute;
@@ -46,6 +48,7 @@
   height: 100vh;
   width: 100vw;
   background-color: rgba(127, 129, 128, 0.37);
+  z-index: 5;
 }
 
 
