--- a/src/client/components/NoMatch/NoMatch.less
+++ b/src/client/components/NoMatch/NoMatch.less
@@ -28,3 +28,29 @@
     margin-bottom: 120px;
   }
 }
+
+.main-no-match-admin {
+  height: 100%;
+  width: 100%;
+  min-width: 695px;
+  display: flex;
+  flex-direction: column;
+  background-color: #f5f5eb;
+  justify-content: center;
+  align-items: center;
+
+
+  &__logo {
+    width: 80px;
+    height: 80px;
+    background: url(../../image/notFound.png) no-repeat;
+    margin-bottom: 30px;
+  }
+
+  &__text {
+    font-size: 20px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 120px;
+  }
+}
