--- a/src/client/components/Admin/Main/MainAdmin.less
+++ b/src/client/components/Admin/Main/MainAdmin.less
@@ -13,6 +13,8 @@
     box-shadow: 0 0 7px rgba(0,0,0,0.5);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    background: url(../../../image/background.png) no-repeat right -10px bottom -10px;
+    background-size: 450px 300px;
     background-color: #f4f4f0;
     margin-top: 1px;
     display: flex;
