--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -58,7 +58,9 @@ body {
         border-radius: 5px;
         border-bottom-left-radius: 10px;
         border-bottom-top-radius: 10px;
-        background-color: #f5f5eb;
+        background: url(../image/background.png) no-repeat right -10px bottom -10px;
+        background-size: 450px 300px;
+        background-color:  #f5f5eb;
         display: flex;
         align-items: center;
         margin-left: 5px;
