--- a/src/client/components/App/ChooseWorker/ChooseWorker.less
+++ b/src/client/components/App/ChooseWorker/ChooseWorker.less
@@ -5,33 +5,17 @@
   display: flex;
   flex-direction: column;
 
-  .buttonHome {
-    font-size: 50px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 95vh;
-    width: 10vw;
-    padding: 0;
-    border: none;
-    color: inherit;
-    cursor: pointer;
-    background-color: rgba(255, 253, 241, 0);
-    outline: none;
-    color: #f5f5eb;
-  }
-
   &__header {
     width: 100%;
     height: 10%;
     text-align: center;
     font-size: 20px;
-    padding-top: 10px;
+
   }
 
   &__table {
     width: 92%;
-    height: 72%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -43,7 +27,6 @@
     &__worker {
       width: 94%;
       height: 60px;
-      margin-top: 7px;
       margin-left: 10px;
       display: flex;
       box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
@@ -102,7 +85,7 @@
 
     button {
       position: absolute;
-      right: 35px;
+      left: 35px;
       bottom: 5px;
       height: 35px;
       width: 90px;
