--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -16,34 +16,11 @@
     flex: 0 1 270px;
     min-width: 265px;
     align-items: center;
-    padding-left: 25px;
+    margin-left: 15px;
     display: flex;
     cursor: pointer;
-
-    &__logo {
-      background: url(../../../image/logo.png) no-repeat left;
-      flex: none;
-      width: 90px;
-      height: 100%;
-    }
-
-    &__discription {
-      flex: 1;
-      padding-right: 40px;
-
-      .company-name {
-        font-size: 20px;
-        font-weight: bolder;
-        letter-spacing: 2px;
-        text-align: center;
-      }
-
-      .tagline {
-        text-align: center;
-        font-size: 15px;
-        color: #4c4c4c;
-      }
-    }
+    background: url(../../../image/logo.png) no-repeat left;
+    background-size: 280px 87px;
   }
 
   .container-user {
